--- a/.github/workflows/docker-to-acr.yaml
+++ b/.github/workflows/docker-to-acr.yaml
@@ -22,6 +22,9 @@ jobs:
             --username ${{ secrets.ACR_USERNAME }} \
             --password-stdin
 
+      - name: Build
+        run: mvn clean install -DskipTests
+
       - name: Build Docker image
         run: docker build -t $IMAGE_NAME:$IMAGE_TAG .
 
